[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 118.0
margin_top = 35.0
margin_right = 202.0
margin_bottom = 145.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 84.0
margin_bottom = 14.0
text = "Game Title"

[node name="LoadGame" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 84.0
margin_bottom = 38.0
text = "Load Game"

[node name="NewGame" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 84.0
margin_bottom = 62.0
text = "New Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 84.0
margin_bottom = 86.0
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 84.0
margin_bottom = 110.0
text = "Quit"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 35.0
margin_top = 52.0
margin_right = 285.0
margin_bottom = 127.0
rect_min_size = Vector2( 250, 70 )
dialog_text = "Your previous save data will be lost. Are you sure to start a new game?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 90 )
current = true
[connection signal="pressed" from="VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
